# sol-sandbox

./: .gitignore  README.md
rust-basics/: Cargo.toml
rust-basics/src/: main.rs
svm/: LICENSE  README.md  bun.lockb  package-lock.json  package.json  tsconfig.base.json
svm/anchor/: Anchor.toml  bun.lockb  package.json
svm/anchor/programs/counter/src/: lib.rs
svm/anchor/programs/lottery-app/: Cargo.toml
svm/anchor/programs/lottery-app/src/: lib.rs
svm/anchor/src/: index.ts  lottery-app-exports.ts
svm/anchor/tests/: lottery-app.spec.ts
svm/handy-py/: dec-to-hex.py  extract-inputs.py  format-proof.py  format.py
svm/solidity/: contract.sol
svm/web/app/: layout.tsx
svm/web/components/counter/: counter-data-access.tsx
svm/web/src/app/: app-routes.tsx
svm/web/src/app/lottery-app/: lottery-app-data-access.tsx  lottery-app-feature.tsx  lottery-app-ui.tsx
